# quip

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: Sprite-0001.json  dev-tiled.tiled-session
assets/dev_tiled/: 02.tiled-session
assets/maps/: 01.tmx  02 - Copy.tmx  02.tmx  TX Plant with Shadow.tsx  TX Plant.tsx  TX Player.tsx  TX Props with Shadow.tsx  TX Props.tsx  TX Shadow Plant.tsx  TX Shadow.tsx  TX Struct.tsx  TX Tileset Grass.tsx  TX Tileset Stone Ground.tsx  TX Tileset Wall.tsx  test_room.json
docs/: add_spell.md  links.md  spell_ideas.md
include/: Ball.h  GameWorld.h  Player.h  attributes.h  camera.h  collision.h  constants.h  enemy.h  entity_animation.h  enums.h  event_queue.h  events.h  helper.h  player.h  texture_manager.h  tilemap.h
include/configs/: enemy_config.h  player_config.h  spell_config.h
include/spells/: spell.h  spell_config.h
src/: Ball.cpp  GameWorld.cpp  MenuScene.cpp  Player.cpp  PlayingScene.cpp  camera.cpp  collision.cpp  enemy.cpp  entity_animation.cpp  event_queue.cpp  events.cpp  main.cpp  player.cpp  texture_manager.cpp  tilemap.cpp
src/spells/: spells.cpp
